--- a/app/app.css
+++ b/app/app.css
@@ -1,16 +1,16 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
-@custom-variant dark (&:is(.dark *));
+@custom-variant dark (&:where(.dark, .dark *));
 
 @theme {
   --font-sans: "Inter", ui-sans-serif, system-ui, sans-serif,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; 
 }
 
 html,
 body {
-  @apply bg-white dark:bg-gray-950;
+  @apply bg-amber-50 dark:bg-blue-900;
 
   @media (prefers-color-scheme: dark) {
     color-scheme: dark;
