--- a/app/app.css
+++ b/app/app.css
@@ -6,16 +6,60 @@
 @theme {
   --font-sans: "Inter", ui-sans-serif, system-ui, sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; 
+  --color-primary: var(--color-blue-500);
+  --color-primary-dark: var(--color-blue-700);
+
+  --text-caption: 11px;
+  --leading-caption: 16px;
+
+  --text-display: var(--text-5xl);
+  --leading-display: 56px;
+
+  --text-body: var(--text-sm);
+  --leading-body: 20px;
+
+  --text-body-large: var(--text-base);
+  --leading-body-large: 24px;
+
+  --text-body-small: var(--text-xs);
+  --leading-body-small: 16px;
 }
 
 html,
 body {
-  @apply bg-amber-50 dark:bg-blue-900;
+  @apply bg-gray-50 dark:bg-linear-to-br from-gray-900 via-blue-950 to-purple-950 ;
 
   @media (prefers-color-scheme: dark) {
     color-scheme: dark;
   }
 }
+
+h1 {
+  font-size: var(--text-4xl);
+  line-height: 3rem;
+}
+
+h2 {
+  font-size: var(--text-3x1);
+  line-height: 2.375rem;
+}
+
+h3 {
+  font-size: var(--text-2x1);
+  line-height: 2rem;
+}
+
+h4{
+  font-size: var(--text-xl);
+  line-height: 28px;
+}
+
+h5{
+  font-size: var(--text-base);
+  line-height: 24px;
+}
+
+
 
 @theme inline {
   --radius-sm: calc(var(--radius) - 4px);
@@ -80,8 +124,8 @@ body {
   --chart-3: oklch(0.398 0.07 227.392);
   --chart-4: oklch(0.828 0.189 84.429);
   --chart-5: oklch(0.769 0.188 70.08);
-  --sidebar: hsl(0 0% 98%);
-  --sidebar-foreground: hsl(240 5.3% 26.1%);
+  --sidebar: var(--color-white);
+  --sidebar-foreground: var(--color-gray-600);
   --sidebar-primary: hsl(240 5.9% 10%);
   --sidebar-primary-foreground: hsl(0 0% 98%);
   --sidebar-accent: hsl(240 4.8% 95.9%);
@@ -91,7 +135,7 @@ body {
 }
 
 .dark {
-  --background: oklch(0.13 0.028 261.692);
+  --background: var(--color-gray-900) ;
   --foreground: oklch(0.985 0.002 247.839);
   --card: oklch(0.21 0.034 264.665);
   --card-foreground: oklch(0.985 0.002 247.839);
@@ -114,8 +158,8 @@ body {
   --chart-3: oklch(0.769 0.188 70.08);
   --chart-4: oklch(0.627 0.265 303.9);
   --chart-5: oklch(0.645 0.246 16.439);
-  --sidebar: hsl(240 5.9% 10%);
-  --sidebar-foreground: hsl(240 4.8% 95.9%);
+  --sidebar: var(--color-gray-900);
+  --sidebar-foreground: var(--color-gray-400);
   --sidebar-primary: hsl(224.3 76.3% 48%);
   --sidebar-primary-foreground: hsl(0 0% 100%);
   --sidebar-accent: hsl(240 3.7% 15.9%);
@@ -129,6 +173,6 @@ body {
     @apply border-border outline-ring/50;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply text-foreground;
   }
 }
